src/test/deca/context/valid/personalTests/testContextObjetAttributs.deca
// Test la declaration d'un objet avec un bloc d'initialisation

class A {
    void m(int a) {
        println("m");
    }

    int a;
}

{
    A a;
    a = new A();
    a.m(12);
    println("ok");
}