src/test/deca/context/invalid/personalTests/ObjetDoubleMethode.deca
// Test de double déclaration d'une méthode

class A {
  public void m() {}
  public void m() {}
}

{}